ingress_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wear-service
spec:
  selector:
    app: wear-app  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  
---
apiVersion: v1
kind: Service
metadata:
  name: watch-service
spec:
  selector:
    app: watch-app  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
